# id3lib

./: .gitignore  CMakeLists.txt  Makefile  _interface_readers.cpp  _interface_readers.h  aaa_config.h  baseid3lib.def  ca2_readers.cpp  cmake_install.cmake  config.h  deployment.rc  framework.h  id3lib.cbp  id3lib.def  id3lib.vcxproj  id3lib.vcxproj.filters  m_id3lib.vcxproj  m_id3lib.vcxproj.filters  nord_core_id3lib.vcxproj  nord_core_id3lib.vcxproj.filters  nord_id3lib.vcxproj  nord_id3lib.vcxproj.filters  u_id3lib.def  u_id3lib.vcxproj  u_id3lib.vcxproj.filters  w_id3lib.vcxproj.filters
id3lib.xcodeproj/: project.pbxproj
id3lib.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
id3lib.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: id3.h
include/id3/: _interface_readers.h  globals.h  id3lib_frame.h  readers.h  tag.h
src/: aaa_writers.cpp  field.cpp  field_binary.cpp  field_impl.h  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  frame.cpp  frame_impl.cpp  frame_impl.h  frame_parse.cpp  frame_render.cpp  globals.cpp  header_frame.cpp  header_frame.h  header_tag.cpp  helpers.cpp  io.cpp  io_decorators.cpp  io_helpers.cpp  misc_support.cpp  mp3_header.h  mp3_parse.cpp  readers.cpp  tag.cpp  tag_file.cpp  tag_find.cpp  tag_impl.cpp  tag_impl.h  tag_parse.cpp  tag_parse_lyrics3.cpp  tag_parse_musicmatch.cpp  tag_parse_v1.cpp  tag_render.cpp
